--- a/front/src/css/folders.css
+++ b/front/src/css/folders.css
@@ -1,9 +1,67 @@
-a {
-    text-decoration: none;
+* {
+    box-sizing: border-box;
+    padding: 0;
+    margin: 0;
+    font-family: monospace;
 }
 
-table tr {
+.main {
     display: flex;
-    justify-content: space-between;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+    background-color: bisque;
+}
+
+.todo {
+    background-color: white;
+    border: 3px solid gray;
+    padding: 15px 10px;
+    width: auto;
+}
+
+.todo h1 a, .todo h1 {
+    font-size: 22px;
+    text-decoration: none;
+    color: black;
+}
+
+table {
+    margin: 15px 0;
+}
+
+.td-padding {
+    padding-left: 5px;
+    padding-right: 7px;
+}
+
+table tr td a {
+    display: grid;
+    grid-template-columns: 1fr repeat(3, auto);
     gap: 10px;
+}
+
+tr label {
+    display: flex;
+    align-items: center;
+}
+
+tr a {
+    text-decoration: none;
+    color: blue;
+}
+
+form {
+    width: auto;
+}
+
+form input {
+    border: .5px solid gray;
+    border-radius: 0;
+    padding: 2px 5px;
+}
+
+form input[type="text"] {
+    width: auto;
+    margin-right: 5px;
 }
